# FFL-Libs

./: LICENSE  README.md  xmake.lua
.xmake/windows/x64/: xmake.conf
Lib/Ad-Hoc-lib/: README.md  xmake.lua
RF/SI24R1/: README.md
RF/xl2400p/: README.md
RF/xn297l/: README.md
demo/: xmake_arm.lua  xmake_riscv.lua
demo/xmake/: main.c  xmake.lua
demo/xrepo_example/: README.md  xmake.lua
sensor/: README.md  xmake.lua  xmake_arm.lua  xmake_riscv.lua
sensor/ICM42688P/: README.md  xmake.lua
sensor/QMI8658A/: README.md  gyro_device.h  qmi8658a_driver.c  qmi8658a_driver.h  qmi8658a_reg.c  xmake.lua
sensor/oled/: OLED.c  README.md  xmake.lua
sensor/sc7a20_new/: CMakeLists.txt  README.md  README.zh-CN.md  sc7a20_reg.h  xmake.lua
sensor/sc7a20_new/adapters/: mock_adapter.c  mock_adapter.h  sc7a20_ch32_adapter.c  sc7a20_ch32_adapter.h
sensor/sc7a20_new/docs/: API_REFERENCE.md  API_REFERENCE.zh-CN.md  PORTING_GUIDE.md  PORTING_GUIDE.zh-CN.md  regs_map.md  regs_map.zh-CN.md
sensor/sc7a20_new/inc/: sc7a20.h  sc7a20_core.h
sensor/sc7a20_new/src/: sc7a20_async.c  sc7a20_core.c  sc7a20_sync.c
sensor/sc7a20_new/test/: integration_test.c  unit_test.c
sensor/sc7a20htr/: README.md  async_usage_guide.md  sc7a20_core.c  sc7a20_core.h  sc7a20_core_async.c  sc7a20_def.h  sc7a20_hal.h  xmake.lua
sensor/sht40/: README.md  sht40_hal.c  sht40_hal.h  xmake.lua
sensor/sht40_new/: README.md  xmake.lua
toolchains/: README.md  wch-riscv.lua
utils/: README.md  ringbuffer.c  ringbuffer.h  sw_timer.c  sw_timer.h  xmake.lua
xmake-repo/: README.md
(+82 files in other folders)
